--- a/config-ohif/index.html
+++ b/config-ohif/index.html
@@ -69,18 +69,11 @@
   <script type="text/javascript">
     window.PUBLIC_URL = '/mod/dicomviewer/viewer-ohif/';
   </script>
-  <script type="text/javascript" src="/mod/dicomviewer/viewer-ohif/app-config.js"></script>
-  <script type="module" src="/mod/dicomviewer/viewer-ohif/init-service-worker.js"></script>
-
-  <title>OHIF Viewer</title>
-
-  <!-- WEB FONTS -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&display=swap" rel="stylesheet" />
-
-  <!-- EXTENSIONS -->
-   <script type="text/javascript" >
+	
+	  <!-- EXTENSIONS -->
+   <script >
    
-	fetch('/mod/dicomviewer/viewer-ohif/configuration.json').then( (data)=>{
+	await fetch('/mod/dicomviewer/viewer-ohif/configuration.json').then( (data)=>{
 		return data.json()
 	}).then ((json)=>{
 		window.config = json;
@@ -90,6 +83,14 @@
 
    
    </script>
+  <script type="module" src="/mod/dicomviewer/viewer-ohif/init-service-worker.js"></script>
+
+  <title>OHIF Viewer</title>
+
+  <!-- WEB FONTS -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&display=swap" rel="stylesheet" />
+
+
 
 </head>
 
