--- a/config-ohif/index.html
+++ b/config-ohif/index.html
@@ -71,7 +71,7 @@
   </script>
 	
 	  <!-- EXTENSIONS -->
-   <script >
+   <script type="module" >
    
 	await fetch('/mod/dicomviewer/viewer-ohif/configuration.json').then( (data)=>{
 		return data.json()
