--- a/config-ohif/index.html
+++ b/config-ohif/index.html
@@ -69,6 +69,7 @@
   <script type="text/javascript">
     window.PUBLIC_URL = '/mod/dicomviewer/viewer-ohif/';
   </script>
+  <script type="text/javascript" src="<%= PUBLIC_URL %>app-config.js"></script>
 	
 	  <!-- EXTENSIONS -->
    <script type="module" >
