--- a/config-ohif/index.html
+++ b/config-ohif/index.html
@@ -70,11 +70,16 @@
     window.PUBLIC_URL = '/mod/dicomviewer/viewer-ohif/';
   </script>
   <script type="text/javascript" src="/mod/dicomviewer/viewer-ohif/app-config.js"></script>
+  <script type="module" src="/mod/dicomviewer/viewer-ohif/init-service-worker.js"></script>
+
+  <title>OHIF Viewer</title>
+
+  <!-- WEB FONTS -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&display=swap" rel="stylesheet" />
 	
-	  <!-- EXTENSIONS -->
+  <!-- EXTENSIONS -->
    <script type="module" >
-   
-	window.config = await fetch('/mod/dicomviewer/viewer-ohif/configuration.json').then( (data)=>{
+	await fetch('/mod/dicomviewer/viewer-ohif/configuration.json').then( (data)=>{
 		return data.json()
 	}).then((json) => {window.config['servers'] = json.servers}).catch( (error)=>{
 		console.log(error)
@@ -82,12 +87,6 @@
 
    
    </script>
-  <script type="module" src="/mod/dicomviewer/viewer-ohif/init-service-worker.js"></script>
-
-  <title>OHIF Viewer</title>
-
-  <!-- WEB FONTS -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&display=swap" rel="stylesheet" />
 
 
 
