--- a/config-ohif/index.html
+++ b/config-ohif/index.html
@@ -28,7 +28,8 @@
   <link rel="apple-touch-icon" sizes="152x152" href="/mod/dicomviewer/viewer-ohif/assets/apple-touch-icon-152x152.png">
   <link rel="apple-touch-icon" sizes="167x167" href="/mod/dicomviewer/viewer-ohif/assets/apple-touch-icon-167x167.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/mod/dicomviewer/viewer-ohif/assets/apple-touch-icon-180x180.png">
-  <link rel="apple-touch-icon" sizes="1024x1024" href="/mod/dicomviewer/viewer-ohif/assets/apple-touch-icon-1024x1024.png">
+  <link rel="apple-touch-icon" sizes="1024x1024"
+    href="/mod/dicomviewer/viewer-ohif/assets/apple-touch-icon-1024x1024.png">
   <link rel="apple-touch-startup-image"
     media="(device-width: 320px) and (device-height: 480px) and (-webkit-device-pixel-ratio: 1)"
     href="/mod/dicomviewer/viewer-ohif/assets/apple-touch-startup-image-320x460.png">
@@ -69,32 +70,15 @@
   <script type="text/javascript">
     window.PUBLIC_URL = '/mod/dicomviewer/viewer-ohif/';
   </script>
-  <script rel="preload" as="script" type="text/javascript" src="/mod/dicomviewer/viewer-ohif/app-config.js"></script>
-		  <script>
-console.log('la')
-  </script>
-	  <!-- EXTENSIONS -->
-  <script rel="preload" as="script" type="module">
-	await fetch('/mod/dicomviewer/viewer-ohif/configuration.json').then( (data)=>{
-		return data.json()
-	}).then((json) => {window.config['dataSources'] = json.dataSources}).then(() => console.log(window.config) ).catch( (error)=>{
-		console.log(error)
-	})
-  </script>
-	
-	  <script>
-console.log('ici')
-  </script>
-	
+
   <script rel="preload" as="script" type="module" src="/mod/dicomviewer/viewer-ohif/init-service-worker.js"></script>
 
   <title>OHIF Viewer</title>
 
   <!-- WEB FONTS -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,500,700&display=swap" rel="stylesheet" rel="preload" as="style"/>
-
-
+  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,500,700&display=swap" rel="stylesheet"
+    rel="preload" as="style" />
 
 </head>
 
